fix: make sure that the navbar is transparent and the bg image is visible when it's at the top of the page

--- a/src/index.css
+++ b/src/index.css
@@ -101,11 +101,13 @@ ul {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  position: fixed;
+  padding-block: 0.7em;
 
-  position: sticky;
   top: 0;
   width: 100%;
-  padding-block: 0.7em;
+  z-index: 10;
+
 }
 
 .nav--filled {
